--- a/GD.FinishingSystem.WEB/GD.FinishingSystem.WEB.csproj
+++ b/GD.FinishingSystem.WEB/GD.FinishingSystem.WEB.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\TestResult\CreateOrUpdate.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Reports\RuloLabel.frx" />
   </ItemGroup>
 
@@ -26,7 +30,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="PDFtoZPL" Version="1.1.0" />
   </ItemGroup>
 
