Update 30-03-2021 Printers on appsettings

--- a/GD.FinishingSystem.WEB/appsettings.json
+++ b/GD.FinishingSystem.WEB/appsettings.json
@@ -2,7 +2,8 @@
   "AppSettings": {
     "IsPrinterIP": true,
     "GD1PrinterName": "ZDesigner ZT230-200dpi ZPL",
-    "GD2PrinterName": "192.168.7.150"
+    "GD2PrinterName": "192.168.7.150",
+    "FileSizeLimit": "2097152"
   },
   "Logging": {
     "LogLevel": {
