--- a/GD.FinishingSystem.WEB/GD.FinishingSystem.WEB.csproj
+++ b/GD.FinishingSystem.WEB/GD.FinishingSystem.WEB.csproj
@@ -12,16 +12,23 @@
 
   <ItemGroup>
     <None Remove="Reports\RuloLabel.prn" />
+    <None Remove="Reports\RulosPDFReport.frx" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Reports\RuloLabel.prn">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Reports\RulosPDFReport.frx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.4" />
+    <PackageReference Include="FastReport.OpenSource" Version="2021.2.7" />
+    <PackageReference Include="FastReport.OpenSource.Data.MsSql" Version="2021.2.0" />
+    <PackageReference Include="FastReport.OpenSource.Web" Version="2021.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="3.8.0" />
