--- a/GD.FinishingSystem.WEB/appsettings.json
+++ b/GD.FinishingSystem.WEB/appsettings.json
@@ -5,6 +5,7 @@
     "GD2PrinterName": "192.168.7.150",
     "FileSizeLimit": "8388608"
   },
+  "PageSize": 3,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
