--- a/GD.FinishingSystem.WEB/GD.FinishingSystem.WEB.csproj
+++ b/GD.FinishingSystem.WEB/GD.FinishingSystem.WEB.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Classes\ZEBRA_USB_PRINTER.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="Views\TestResult\CreateOrUpdate.cshtml" />
   </ItemGroup>
 
