--- a/GD.FinishingSystem.WEB/appsettings.json
+++ b/GD.FinishingSystem.WEB/appsettings.json
@@ -3,9 +3,9 @@
     "IsPrinterIP": true,
     "GD1PrinterName": "ZDesigner ZT230-200dpi ZPL",
     "GD2PrinterName": "192.168.7.150",
-    "FileSizeLimit": "8388608"
+    "FileSizeLimit": 8388608,
+    "PageSize": 10
   },
-  "PageSize": 10,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
