--- a/GD.FinishingSystem.Entities/GD.FinishingSystem.Entities.csproj
+++ b/GD.FinishingSystem.Entities/GD.FinishingSystem.Entities.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModels\VMRulo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
   </ItemGroup>
 
