Raw fabric production warehouse was added, Reports were modified among other things. Date: 2023-09-21 v3.0.0

--- a/GD.FinishingSystem.Entities/GD.FinishingSystem.Entities.csproj
+++ b/GD.FinishingSystem.Entities/GD.FinishingSystem.Entities.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="ViewModels\VMRulo.cs" />
+    <Compile Remove="ViewModels\Enums.cs" />
+    <Compile Remove="ViewModels\VMOriginType.cs" />
+    <Compile Remove="ViewModels\VMRulo2.cs" />
   </ItemGroup>
 
   <ItemGroup>
