--- a/GD.FinishingSystem.WEB/Properties/launchSettings.json
+++ b/GD.FinishingSystem.WEB/Properties/launchSettings.json
@@ -1,3 +1,16 @@
+//{
+//  "profiles": {
+//    "GD.FinishingSystem.WEB": {
+//      "commandName": "Project",
+//      "launchBrowser": true,
+//      "environmentVariables": {
+//        "ASPNETCORE_ENVIRONMENT": "Development"
+//      },
+//      "applicationUrl": "https://localhost:65227;http://localhost:65228"
+//    }
+//  }
+//}
+
 {
   "iisSettings": {
     "windowsAuthentication": false,
